src/objects/Asset_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Asset</label>
        <referenceTo>Account_Asset__c</referenceTo>
        <relationshipLabel>Asset Contacts</relationshipLabel>
        <relationshipName>Asset_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Contact__r.MailingStreet &amp; BR() &amp;
 Contact__r.MailingCity &amp; &quot;,&quot; &amp;
 Contact__r.MailingState &amp; &quot; &quot; &amp;
 Contact__r.MailingPostalCode &amp; BR() &amp;
 Contact__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisory_Council__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advisory Council</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assets Contacts</relationshipLabel>
        <relationshipName>Asset_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Account_Asset__r.Contract_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>Account_Asset__r.Contract_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>Contact__r.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Asset Contact</label>
    <nameField>
        <displayFormat>Asset Contact - {0000}</displayFormat>
        <label>Asset Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>